--- a/src/maler/soknad.njk
+++ b/src/maler/soknad.njk
@@ -1,6 +1,6 @@
 ---
 title: 'Søknad'
-description: 'Grunnoppsett for oppdelte søknader'
+description: 'Grunnoppsett for søknader'
 order: 4
 stepperList:
   -
