--- a/src/maler/forside.njk
+++ b/src/maler/forside.njk
@@ -92,19 +92,19 @@ order: 1
 {% block content %}
   {% include "partials/header.njk" %}
 
-  <main class="text-gray-900 ">
-    <div class="px-5 py-6 bg-white md:py-12 sm:px-8">
+  <main class="text-gray-900" x-bind:inert="menuOpen || loginOpen">
+    <div class="px-5 py-8 bg-white md:py-12 sm:px-8">
       <div class="max-w-screen-lg mx-auto xs:w-[95%]">
         <h2 class="-mt-2 text-xl font-semibold md:text-3xl">Hva kan vi hjelpe deg med?</h2>
-        <ul class="grid gap-3 mx-auto mt-4 grid-cols-areas md:gap-6">
+        <ul class="grid gap-2 mx-auto mt-4 lg:grid-cols-3 sm:grid-cols-2 sm:gap-4 md:gap-6">
           {% for service in home.servicesList %}
             <li class="">
-              <a class="relative flex items-center justify-between gap-4 bg-deepblue-50 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 hover:text-blue-500 hover:shadow-xl hover:bg-gray-100 focus:shadow-xl min-h-[8vh] md:min-h-[13vh] px-6 py-2 overflow-hidden group c-area-card" href="#">
-                <div class="text-xl md:text-2xl leading-snug font-semibold underline group-hover:no-underline flex-none max-w-[75%] md:max-w-[25ch]">
-                  {{ service.title }}
+              <a class="relative flex items-center justify-between gap-4 z-10 bg-deepblue-50 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 hover:text-blue-500 hover:shadow-xl hover:bg-gray-100 focus:shadow-xl min-h-[9vh] lg:min-h-[12vh] pl-6 pr-[40%] py-2 overflow-hidden group c-area-card" href="#">
+                <div class="text-xl font-semibold leading-snug underline md:text-2xl group-hover:no-underline">
+                  {{ service.title | safe }}
                 </div>
                 {% if service.inlineSvg %}
-                  {{ service.inlineSvg | svgContents("right-0 h-full w-auto rounded-lg self-stretch absolute inset-y-0 pointer-events-none") | safe }}
+                  {{ service.inlineSvg | svgContents("-z-10 right-0 h-full w-auto rounded-lg self-stretch absolute inset-y-0 pointer-events-none") | safe }}
                 {% endif %}
               </a>
             </li>
@@ -116,11 +116,11 @@ order: 1
     <div class="px-5 pt-8 pb-8 bg-[#fde6e6] md:pt-12 sm:px-8">
       <div class="max-w-screen-lg mx-auto xs:w-[95%]">
         <h2 class="-mt-2 text-xl font-semibold md:text-3xl">Snarveier</h2>
-        <ul class="grid gap-3 mt-4 sm:gap-4 md:gap-6 sm:grid-cols-2">
+        <ul class="grid gap-2 mt-4 sm:gap-4 md:gap-6 sm:grid-cols-2">
           {% for shortcut in home.shortcutsList %}
             <li class="grid">
-              <a class="flex items-center gap-4 py-5 pl-6 pr-12 transition duration-300 ease-out bg-white rounded-lg group hover:text-blue-500 hover:shadow-lg focus:outline-none focus:ring-2 focus:ring-blue-500" href="#">
-                <svg class="w-12 h-12" width="54" height="54" fill="none" viewBox="0 0 54 54" aria-hidden="true" role="img" focusable="false" overflow="visible">
+              <a class="flex items-center gap-4 py-3 pl-5 pr-8 transition duration-300 ease-out bg-white rounded-lg md:py-4 group hover:text-blue-500 hover:shadow-lg focus:outline-none focus:ring-2 focus:ring-blue-500" href="#">
+                <svg class="w-10 h-10 md:w-11 md:h-11" width="54" height="54" fill="none" viewBox="0 0 54 54" aria-hidden="true" role="img" focusable="false" overflow="visible">
                   <g class="duration-200 ease-out translate-x-4 transition-custom fine:group-hover:-translate-x-2">
                     <path stroke="#000" stroke-width="2" d="M9 17h16" />
                     <path stroke="#CCE2EE" stroke-width="3" d="M8 14.5h20" />
@@ -140,10 +140,10 @@ order: 1
       </div>
     </div>
 
-    <div class="mt-2 px-5 pt-8 pb-8 bg-[#f1f1f1] md:pt-12 sm:px-8">
+    <div class="mt-2 px-5 py-8 bg-[#f1f1f1] md:py-12 sm:px-8">
       <div class="max-w-screen-lg mx-auto xs:w-[95%]">
         <h2 class="-mt-2 text-xl font-semibold md:text-3xl">Aktuelt</h2>
-        <div class="grid gap-3 mt-4 sm:gap-4 md:gap-6 sm:grid-cols-2">
+        <div class="grid gap-2 mt-4 sm:gap-4 md:gap-6 sm:grid-cols-2">
           {% for news in home.newsList %}
             <a class="grid gap-2 px-6 py-5 duration-300 ease-out bg-white rounded-lg group transition-custom hover:text-blue-500 hover:shadow-lg focus:outline-none focus:ring-2 focus:ring-blue-500" href="#">
               <span class="max-w-[30ch] text-xl font-semibold md:text-2xl underline group-hover:text-blue-500 group-hover:no-underline">{{ news.title }}</span>
@@ -154,10 +154,10 @@ order: 1
       </div>
     </div>
 
-    <div class="px-5 pt-6 pb-12 bg-white md:pt-12 md:pb-16 sm:px-8">
-      <div class="max-w-screen-lg mx-auto xs:w-[95%]">
+    <div class="px-5 py-8 pb-12 bg-white md:py-12 sm:px-8">
+      <div class="max-w-screen-lg mx-auto sm:pb-4 xs:w-[95%]">
         <h2 class="-mt-2 text-xl font-semibold md:text-3xl">Kontakt oss</h2>
-        <div class="grid gap-3 mt-4 sm:gap-4 md:gap-6 sm:grid-cols-2">
+        <div class="grid gap-8 mt-4 sm:gap-4 md:gap-6 sm:grid-cols-2">
           <div class="relative grid gap-2 px-6 py-6 bg-blue-50 rounded-t-3xl rounded-r-3xl group">
             <h3 class="text-xl font-semibold md:text-2xl">
               <a href="#" class="text-blue-500 underline hover:text-deepblue-600 hover:no-underline">Du kan chatte med oss</a>
