--- a/src/maler/kontor.njk
+++ b/src/maler/kontor.njk
@@ -85,6 +85,12 @@ bodyClass: 'bg-white'
       </div>
     </div>
 
+    <div class="px-4 py-4 bg-gray-100 md:py-8 md:px-8">
+      <div class="md:max-w-screen-lg mx-auto xs:w-[95%]">
+        <div class="py-12 text-center text-[10ch] leading-loose opacity-20 mb-10">...</div>
+      </div>
+    </div>
+
   </main>
 
   {% include "partials/footer.njk" %}
