--- a/src/maler/artikkel.njk
+++ b/src/maler/artikkel.njk
@@ -17,9 +17,9 @@ bodyClass: 'bg-gray-100'
   <main class="min-h-[61vh] text-lg text-gray-800">
 
     <div class="px-4 pt-8 pb-4 bg-white md:px-8" x-data="{ bgGradient: false }" x-on:click="bgGradient = !bgGradient" x-bind:class="bgGradient && 'bg-gradient-to-b from-white to-gray-100'">
-      <div class="md:max-w-screen-lg mx-auto xs:w-[95%]">
+      <div class="md:max-w-screen-lg mx-auto sm:w-[95%]">
         <p class="flex items-center gap-2 text-purple-600">
-          <svg xmlns="http://www.w3.org/2000/svg" class="flex-none w-6 h-6" width="24" height="24" fill="none" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+          <svg xmlns="http://www.w3.org/2000/svg" class="flex-none w-6 h-6" width="24" height="24" fill="none" viewBox="0 0 24 24" aria-hidden="true" focusable="false" role="img">
             <path stroke="#634689" stroke-width="1.5" d="m9.5 12.5 2.5 1 2.5 1.5V6L12 7.5l-2.5 1m-5 2c0-1.1.9-2 2-2h3v4h-3a2 2 0 0 1-2-2ZM7 13l2.5 6.5m8-9H21M17 6l3-2m-3 11 3 2" />
           </svg>
           <span class="text-sm font-semibold tracking-wider uppercase">Pressemelding</span>
@@ -31,7 +31,7 @@ bodyClass: 'bg-gray-100'
     </div>
 
     <div class="px-4 pt-4 pb-20 md:pt-6 md:px-8">
-      <div class="md:max-w-screen-lg mx-auto xs:w-[95%]">
+      <div class="md:max-w-screen-lg mx-auto sm:w-[95%]">
         <div class="max-w-prose">
           <p class="text-sm text-gray-600">Publisert 30. september 2022</p>
           <p class="mt-4 text-xl font-semibold">Ved utgangen av september var det registrert 76 900 helt ledige, delvis ledige og arbeidssøkere på tiltak hos NAV, noe som utgjør 2,6 prosent av arbeidsstyrken. Justert for sesongvariasjoner er det en nedgang på 2 100 arbeidssøkere fra august.</p>
