--- a/src/maler/soknad.njk
+++ b/src/maler/soknad.njk
@@ -143,7 +143,7 @@ stepperList:
 
   <main class="min-h-[61vh] text-lg text-gray-900">
     <div class="px-4 py-8 bg-white md:pt-12 md:pb-20 md:px-8">
-      <div class="xs:max-w-xl md:max-w-screen-md mx-auto xs:w-[95%]">
+      <div class="xs:max-w-xl md:max-w-screen-md mx-auto sm:w-[95%]">
         <h1 class="text-3xl font-semibold leading-tight md:text-4xl">Søknad om dagpenger</h1>
 
         <div class="mt-3 md:grid md:grid-flow-row-dense md:gap-20 md:grid-cols-12">
@@ -154,7 +154,7 @@ stepperList:
               <button class="absolute inset-0" x-on:click="stepperOpen = !stepperOpen">
                 <span class="sr-only">Vis seksjoner</span>
               </button>
-              <svg class="flex-none w-6 h-6 pointer-events-none" x-bind:class="stepperOpen && 'rotate-180'" width="24" height="24" viewBox="0 0 24 24" fill="none" aria-hidden="true" focusable="false">
+              <svg class="flex-none w-6 h-6 pointer-events-none" x-bind:class="stepperOpen && 'rotate-180'" width="24" height="24" viewBox="0 0 24 24" fill="none" aria-hidden="true" focusable="false" role="img">
                 <path d="M18 9L12 15L6 9" stroke="currentColor" stroke-width="2" />
               </svg>
             </div>
@@ -168,7 +168,7 @@ stepperList:
                       {% if item.state === 'complete' %}navds-stepper__step--complete{% endif %}">
                       <span class="navds-stepper__marker" aria-hidden="true">
                         {% if item.state === 'complete' %}
-                          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" focusable="false" role="img" aria-hidden="true"><path d="M7 13L10 16L17.5 8.5" stroke="currentColor" stroke-width="2" /></svg>
+                          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" focusable="false" role="img"  aria-hidden="true"><path d="M7 13L10 16L17.5 8.5" stroke="currentColor" stroke-width="2" /></svg>
 
                         {% else %}
                           {{ loop.index }}
@@ -194,7 +194,7 @@ stepperList:
                     {% if item.state === 'complete' %}navds-stepper__step--complete{% endif %}">
                     <span class="navds-stepper__marker" aria-hidden="true">
                       {% if item.state === 'complete' %}
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" focusable="false" role="img" aria-hidden="true"><path d="M7 13L10 16L17.5 8.5" stroke="currentColor" stroke-width="2" /></svg>
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" focusable="false" role="img"  aria-hidden="true"><path d="M7 13L10 16L17.5 8.5" stroke="currentColor" stroke-width="2" /></svg>
 
                       {% else %}
                         {{ loop.index }}
